exports[`A PR from a branch must trigger an appropriate status update 1`] = `
[
  {
    "owner": "whatwg",
    "repo": "console",
    "sha": "80a564b821732bebe6ea082db7c699389ecf4716",
    "statusField1": "status value 1",
    "statusField2": "status value 2"
  }
]
`;

exports[`A PR from a fork must trigger an appropriate status update 1`] = `
[
  {
    "owner": "whatwg",
    "repo": "console",
    "sha": "d9dd6d011d09e3b423adc681d3a2fee6c4e1cce2",
    "statusField1": "status value 1",
    "statusField2": "status value 2"
  }
]
`;

exports[`A PR with /commits at the end must still trigger an appropriate status update 1`] = `
[
  {
    "owner": "whatwg",
    "repo": "console",
    "sha": "d9dd6d011d09e3b423adc681d3a2fee6c4e1cce2",
    "statusField1": "status value 1",
    "statusField2": "status value 2"
  }
]
`;

exports[`A PR with /files at the end must still trigger an appropriate status update 1`] = `
[
  {
    "owner": "whatwg",
    "repo": "console",
    "sha": "d9dd6d011d09e3b423adc681d3a2fee6c4e1cce2",
    "statusField1": "status value 1",
    "statusField2": "status value 2"
  }
]
`;

exports[`A PR with a hash at the end must still trigger an appropriate status update 1`] = `
[
  {
    "owner": "whatwg",
    "repo": "console",
    "sha": "d9dd6d011d09e3b423adc681d3a2fee6c4e1cce2",
    "statusField1": "status value 1",
    "statusField2": "status value 2"
  }
]
`;
